📦 NEW: user and clients
